--- a/ability_search.html
+++ b/ability_search.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Ability Search</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css"/>
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <div class="pages">
+        <nav>
+            <a class="nav-btn hme" href = "index.html">Home</a>
+            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokemon Information</a>
+            <a class="nav-btn typ" href = "type_search.html">Type Information</a>
+            <a class="nav-btn itm" href = "item_search.html">Item Information</a>
+        </nav>
+    </div>
+</body>
+
+</html>
