--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Mon Finder</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Welcome to Mon Finder</h1>
