Added api call functionality

--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <link rel="stylesheet" href="styles.css"/>
     <script src="script.js" defer></script>
 </head>
+
 <body>
+
     <h1>Welcome to Mon Finder</h1>
+
     <p>This is a tool for searching pokemon information such as pokemon name, types, abilities and items</p>
+    
     <div class="pages">
         <nav>
-            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokemon Information</a>
+            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokémon Information</a>
             <a class="nav-btn typ" href = "type_search.html">Type Information</a>
             <a class="nav-btn ablty" href = "ability_search.html">Ability Information</a>
             <a class="nav-btn itm" href = "item_search.html">Item Information</a>
         </nav>
     </div>
+
 </body>
 
 </html>
