--- a/ability_search.html
+++ b/ability_search.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Ability Search</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
     <script src="script.js" defer></script>
 </head>
+
 <body>
+
+    <h1>Ability Information</h1>
+
+    <p>This page is for finsing information on all the different abilities in the Pokémon games.</p>
+
     <div class="pages">
         <nav>
             <a class="nav-btn hme" href = "index.html">Home</a>
-            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokemon Information</a>
+            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokémon Information</a>
             <a class="nav-btn typ" href = "type_search.html">Type Information</a>
             <a class="nav-btn itm" href = "item_search.html">Item Information</a>
         </nav>
     </div>
+
+    <div class="searchSection">
+        <input class = input id="aSearchInput" type="text" placeholder="Enter Ability name..." />
+        <button class="searchButton" onclick="searchAbility()">Search</button>
+    </div>
+
+    <div id="abilityInfo">
+        <!-- Ability information will be displayed here -->
+    </div>
+    
 </body>
 
 </html>
