--- a/type_search.html
+++ b/type_search.html
@@ -10,7 +10,7 @@
     <div class="pages">
         <nav>
             <a class="nav-btn hme" href = "index.html">Home</a>
-            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokemon Information</a>
+            <a class="nav-btn pkmn" href = "pokemon_search.html">Pokémon Information</a>
             <a class="nav-btn ablty" href = "ability_search.html">Ability Information</a>
             <a class="nav-btn itm" href = "item_search.html">Item Information</a>
         </nav>
