--- a/ability_search.html
+++ b/ability_search.html
@@ -19,6 +19,7 @@
             <a class="nav-btn hme" href = "index.html">Home</a>
             <a class="nav-btn pkmn" href = "pokemon_search.html">Pokémon Information</a>
             <a class="nav-btn typ" href = "type_search.html">Type Information</a>
+            <a class="nav-btn mve" href = "move_search.html">Move Information</a>
             <a class="nav-btn itm" href = "item_search.html">Item Information</a>
         </nav>
     </div>
