--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <nav>
             <a class="nav-btn pkmn" href = "pokemon_search.html">Pokémon Information</a>
             <a class="nav-btn typ" href = "type_search.html">Type Information</a>
+            <a class="nav-btn mve" href = "move_search.html">Move Information</a>
             <a class="nav-btn ablty" href = "ability_search.html">Ability Information</a>
             <a class="nav-btn itm" href = "item_search.html">Item Information</a>
         </nav>
