fixed headers + type display

--- a/type_search.html
+++ b/type_search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Item Search</title>
+    <title>Type Search</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
     <script src="script.js" defer></script>
