--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Mon Finder</title>
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
     <script src="script.js" defer></script>
