--- a/pokemon_search.html
+++ b/pokemon_search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Item Search</title>
+    <title>Pokemon Search</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
     <script src="script.js" defer></script>
